syntax = "proto3";

package scaler.analyzerserv;
option java_multiple_files = true;
option java_package = "com.xttechgroup.scaler.analyzerserv";


message BinaryExecResult{
  bool success = 1;
  optional string errorMsg = 2;
}
