syntax = "proto3";

package scaler.analyzerserv;
option java_multiple_files = true;
option java_package = "com.xttechgroup.scaler.analyzerserv";

import "google/protobuf/empty.proto";
import "analyzerserver/JobService.proto";
import "analyzerserver/BinaryExecResult.proto";


// The request message containing the user's name.

message ConfigMsg {
  int64 jobId = 1;
  string yamlConfig = 2;
}

message YAMLConfigRlt{
  bool success = 1;
  string errorMsg = 2;
  string yamlConfig = 3;
}



// The greeting service definition.
service Config {
  //Add elfimage info to current job
  rpc appendYAMLConfig(ConfigMsg) returns(BinaryExecResult);

  rpc getConfigFromServer(JobInfoMsg) returns(YAMLConfigRlt);
}